Fixed issue with firefox and added footer.
Fixed the issue with firefox where the graph was getting truncated.
Added a footer with the app version.

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
 .radio-choice-label {
   font-size: 1.25em;
 }
+
+.footer {
+  margin-top: 1rem;
+  padding: 1rem;
+  background-color: rgb(235, 195, 64);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
